--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,17 @@ services:
         networks:
             - net
 
+    laravel:
+        image: bitnami/laravel:10.3.3-debian-12-r13
+        restart: always
+        ports:
+            - 8000:8000
+        volumes:
+            - /laravel11:/app
+        networks:
+            - net
+        depends_on:
+            - mariadb
 volumes:
     mariadb-data:
 networks:
