Update read me + fix laravel docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,13 @@ services:
         ports:
             - 8000:8000
         volumes:
-            - /laravel11:/app
+            - ./laravel11:/app
+        environment:
+            - DB_HOST=mariadb
+            - DB_PORT=3306
+            - DB_USERNAME=root
+            - DB_DATABASE=laravel11
+            - DB_PASSWORD=${MARIADB_PASS}
         networks:
             - net
         depends_on:
