--- a/laravel11/.env
+++ b/laravel11/.env
@@ -1,3 +1,7 @@
+BASE_ADMIN_EMAIL=nicolas@lennard.swiss
+BASE_ADMIN_PASS=pass
+BASE_ADMIN_NAME=Nicolas Lennard
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:1bAkYw1+HBF9O/zn1+DNmlw0iRcZj7ufQ6TJ5zJgMqo=
