--- a/laravel11/.env
+++ b/laravel11/.env
@@ -1,6 +1,6 @@
 BASE_ADMIN_EMAIL=nicolas@lennard.swiss
 BASE_ADMIN_PASS=pass
-BASE_ADMIN_NAME=Nicolas Lennard
+BASE_ADMIN_NAME="Nicolas Lennard"
 
 APP_NAME=Laravel
 APP_ENV=local
