--- a/laravel11/.env
+++ b/laravel11/.env
@@ -24,8 +24,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mariadb
-DB_HOST=mariadb
-DB_PORT=3306
+DB_HOST=127.0.0.1
+DB_PORT=1024
 DB_DATABASE=laravel11
 DB_USERNAME=root
 DB_PASSWORD=test123
